--- a/Navigation.ipynb
+++ b/Navigation.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from unityagents import UnityEnvironment\n",
@@ -48,10 +50,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "env = UnityEnvironment(file_name=\"...\")"
+    "env = UnityEnvironment(file_name=\"/Users/NhatAnh/Documents/ML/DRL/DeepRL-Navigation\")"
    ]
   },
   {
@@ -64,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get the default brain\n",
@@ -92,7 +98,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# reset the environment\n",
@@ -128,7 +136,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "env_info = env.reset(train_mode=False)[brain_name] # reset the environment\n",
@@ -158,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "env.close()"
@@ -168,12 +180,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. It's Your Turn!\n",
+    "### 4. Train DQN\n",
     "\n",
     "Now it's your turn to train your own agent to solve the environment!  When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
     "```python\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "from collections import deque\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "#uncomment the following line if import failed\n",
+    "sys.path.insert(0, os.path.abspath(os.path.join(os.path.dirname(__name__), '..')))\n",
+    "\n",
+    "from dqn.dqn_agent import DQNAgent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Score that the agent needs to achieve\n",
+    "BENCHMARK_SCORE = 13.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create a DQN Agent\n",
+    "agent = DQNAgent(state_size, action_size, seed=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def train_dqn(n_episodes=2000, max_t=1000, eps_start=1.0, eps_end=0.01, eps_decay=0.995):\n",
+    "    \"\"\"Deep Q-Learning.\n",
+    "    \n",
+    "    Params\n",
+    "    ======\n",
+    "        n_episodes (int): maximum number of training episodes\n",
+    "        max_t (int): maximum number of timesteps per episode\n",
+    "        eps_start (float): starting value of epsilon, for epsilon-greedy action selection\n",
+    "        eps_end (float): minimum value of epsilon\n",
+    "        eps_decay (float): multiplicative factor (per episode) for decreasing epsilon\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
+    "    scores = []\n",
+    "    scores_window = deque(maxlen=100)\n",
+    "    eps = eps_start\n",
+    "    for i_episode in range(1, n_episodes + 1):\n",
+    "        state = env.reset()\n",
+    "        score = 0\n",
+    "        for t in range(max_t):\n",
+    "            action = agent.act(state, eps)\n",
+    "            next_state, reward, done, _ = env.step(action)\n",
+    "            agent.step(state, action, reward, next_state, done)\n",
+    "            state = next_state\n",
+    "            score += reward\n",
+    "            if done:\n",
+    "                break\n",
+    "        scores_window.append(score)  # save most recent score\n",
+    "        scores.append(score)  # save most recent score\n",
+    "        eps = max(eps_end, eps_start * eps_decay)  # decrease epsilon\n",
+    "    \n",
+    "        print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
+    "        if i_episode % 100 == 0:\n",
+    "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
+    "        if np.mean(scores_window) >= BENCHMARK_SCORE:\n",
+    "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode - 100,\n",
+    "                                                                                         np.mean(scores_window)))\n",
+    "        torch.save(agent.qnetwork_local.state_dict(), 'checkpoint.pth')\n",
+    "        break\n",
+    "\n",
+    "    return scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "scores = train_dqn()"
    ]
   }
  ],
@@ -193,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
