--- a/Navigation.ipynb
+++ b/Navigation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -49,13 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "env = UnityEnvironment(file_name=\"/Users/NhatAnh/Documents/ML/DRL/DeepRL-Navigation\")"
+    "env = UnityEnvironment(file_name=\"/Users/NhatAnh/Documents/ML/DRL/DeepRL-Navigation/Banana.app\")"
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -97,11 +97,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of agents: 1\n",
+      "Number of actions: 4\n",
+      "States look like: [ 1.          0.          0.          0.          0.84408134  0.          0.\n",
+      "  1.          0.          0.0748472   0.          1.          0.          0.\n",
+      "  0.25755     1.          0.          0.          0.          0.74177343\n",
+      "  0.          1.          0.          0.          0.25854847  0.          0.\n",
+      "  1.          0.          0.09355672  0.          1.          0.          0.\n",
+      "  0.31969345  0.          0.        ]\n",
+      "States have length: 37\n"
+     ]
+    }
+   ],
    "source": [
     "# reset the environment\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
@@ -124,63 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Take Random Actions in the Environment\n",
-    "\n",
-    "In the next code cell, you will learn how to use the Python API to control the agent and receive feedback from the environment.\n",
-    "\n",
-    "Once this cell is executed, you will watch the agent's performance, if it selects an action (uniformly) at random with each time step.  A window should pop up that allows you to observe the agent, as it moves through the environment.  \n",
-    "\n",
-    "Of course, as part of the project, you'll have to change the code so that the agent is able to use its experience to gradually choose better actions when interacting with the environment!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "env_info = env.reset(train_mode=False)[brain_name] # reset the environment\n",
-    "state = env_info.vector_observations[0]            # get the current state\n",
-    "score = 0                                          # initialize the score\n",
-    "while True:\n",
-    "    action = np.random.randint(action_size)        # select an action\n",
-    "    env_info = env.step(action)[brain_name]        # send the action to the environment\n",
-    "    next_state = env_info.vector_observations[0]   # get the next state\n",
-    "    reward = env_info.rewards[0]                   # get the reward\n",
-    "    done = env_info.local_done[0]                  # see if episode has finished\n",
-    "    score += reward                                # update the score\n",
-    "    state = next_state                             # roll over the state to next time step\n",
-    "    if done:                                       # exit loop if episode finished\n",
-    "        break\n",
-    "    \n",
-    "print(\"Score: {}\".format(score))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When finished, you can close the environment."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "env.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4. Train DQN\n",
+    "### 3. Train DQN\n",
     "\n",
     "Now it's your turn to train your own agent to solve the environment!  When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
     "```python\n",
@@ -190,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -199,7 +159,6 @@
     "import sys\n",
     "import os\n",
     "import torch\n",
-    "import numpy as np\n",
     "from collections import deque\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -212,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -224,11 +183,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Linear-1                   [-1, 64]           2,432\n",
+      "            Linear-2                   [-1, 64]           4,160\n",
+      "            Linear-3                    [-1, 4]             260\n",
+      "================================================================\n",
+      "Total params: 6,852\n",
+      "Trainable params: 6,852\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.00\n",
+      "Forward/backward pass size (MB): 0.00\n",
+      "Params size (MB): 0.03\n",
+      "Estimated Total Size (MB): 0.03\n",
+      "----------------------------------------------------------------\n",
+      "<function summary at 0x10d3ea0d0>\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a DQN Agent\n",
     "agent = DQNAgent(state_size, action_size, seed=0)"
@@ -236,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -253,25 +236,29 @@
     "        eps_end (float): minimum value of epsilon\n",
     "        eps_decay (float): multiplicative factor (per episode) for decreasing epsilon\n",
     "    \"\"\"\n",
-    "\n",
-    "\n",
-    "    scores = []\n",
-    "    scores_window = deque(maxlen=100)\n",
+    "    scores = []                             # keep track of all the scores\n",
+    "    scores_window = deque(maxlen=100)       # keep track of the last 100 scores\n",
     "    eps = eps_start\n",
     "    for i_episode in range(1, n_episodes + 1):\n",
-    "        state = env.reset()\n",
+    "        env_info = env.reset(train_mode=True)[brain_name]\n",
+    "        state = env_info.vector_observations[0]\n",
     "        score = 0\n",
     "        for t in range(max_t):\n",
     "            action = agent.act(state, eps)\n",
-    "            next_state, reward, done, _ = env.step(action)\n",
+    "            env_info = env.step(action)[brain_name]\n",
+    "            \n",
+    "            next_state = env_info.vector_observations[0]\n",
+    "            reward = env_info.rewards[0]\n",
+    "            done = env_info.local_done[0]\n",
+    "            \n",
     "            agent.step(state, action, reward, next_state, done)\n",
     "            state = next_state\n",
     "            score += reward\n",
     "            if done:\n",
     "                break\n",
-    "        scores_window.append(score)  # save most recent score\n",
-    "        scores.append(score)  # save most recent score\n",
-    "        eps = max(eps_end, eps_start * eps_decay)  # decrease epsilon\n",
+    "        scores_window.append(score)          # save most recent score\n",
+    "        scores.append(score)                 # save most recent score\n",
+    "        eps = max(eps_end, eps * eps_decay)  # decrease epsilon\n",
     "    \n",
     "        print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
     "        if i_episode % 100 == 0:\n",
@@ -279,10 +266,47 @@
     "        if np.mean(scores_window) >= BENCHMARK_SCORE:\n",
     "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode - 100,\n",
     "                                                                                         np.mean(scores_window)))\n",
-    "        torch.save(agent.qnetwork_local.state_dict(), 'checkpoint.pth')\n",
-    "        break\n",
+    "            torch.save(agent.dqn_local.state_dict(), 'checkpoint.pth')\n",
+    "            break\n",
     "\n",
     "    return scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot(scores):\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111)\n",
+    "    plt.plot(np.arange(len(scores)), scores)\n",
+    "    plt.ylabel('Score')\n",
+    "    plt.xlabel('Episode #')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 19\tAverage Score: 0.11"
+     ]
+    }
+   ],
+   "source": [
+    "scores = train_dqn()\n",
+    "plot(scores)"
    ]
   },
   {
@@ -293,8 +317,37 @@
    },
    "outputs": [],
    "source": [
-    "scores = train_dqn()"
+    "env_info = env.reset(train_mode=False)[brain_name] # reset the environment\n",
+    "state = env_info.vector_observations[0]            # get the current state\n",
+    "score = 0                                          # initialize the score\n",
+    "\n",
+    "while True:\n",
+    "    action = agent.act(state)                      # select an action\n",
+    "    env_info = env.step(action)[brain_name]         # send the action to the environment\n",
+    "    \n",
+    "    next_state = env_info.vector_observations[0]   # get the next state\n",
+    "    reward = env_info.rewards[0]                   # get the reward\n",
+    "    done = env_info.local_done[0]                  # see if episode has finished\n",
+    "    \n",
+    "    score += reward                                # update the score\n",
+    "    \n",
+    "    if done:                                       # exit loop if episode finished\n",
+    "        break\n",
+    "                        \n",
+    "    state = next_state                             # roll over the state to next time step\n",
+    "                        \n",
+    "env.close()\n",
+    "print(\"Score: {}\".format(score))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
