--- a/Navigation.ipynb
+++ b/Navigation.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Navigation\n",
+    "# Deep Reinforcement Learning Project - Navigation\n",
     "\n",
     "---\n",
     "\n",
-    "In this notebook, you will learn how to use the Unity ML-Agents environment for the first project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893).\n",
+    "In this notebook, we will train and watch a DQN Agent walks in a virtual environment (Banana Unity environment) and collects as many yellow bananas as possible while avoiding purple ones.\n",
     "\n",
     "### 1. Start the Environment\n",
     "\n",
@@ -140,12 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Train DQN\n",
-    "\n",
-    "Now it's your turn to train your own agent to solve the environment!  When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
-    "```python\n",
-    "env_info = env.reset(train_mode=True)[brain_name]\n",
-    "```"
+    "### 3. Train DQN"
    ]
   },
   {
@@ -293,7 +288,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -307,6 +303,14 @@
    "source": [
     "scores = train_dqn()\n",
     "plot(scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Watch Agent\n",
+    "Now, we have finished training our agent. It's time to watch our agent performs in the environment!"
    ]
   },
   {
